# portugython

./: .gitignore  README.md  pyproject.toml
docs/playbook/: PLB-2022.md
docs/pt/docs/tutorial/: functions.md
playbook/: PLB-2022
portugython/: embutidos.py
src/portugython/: embutidos.py  main.py
src/portugython/erros/: tipo.py
