[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "portugython_victorkolis"
version = "0.0.1"
authors = [
  { name="Victor Kolis", email="victorkolis@tirillo.com" },
]
maintainers = [
    { name="Victor Kolis", email="victorkolis@tirillo.com" },
]
description = "A Portuguese translation of the Python functions/modules/packages"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = "https://github.com/pypa/portugython/issues"